# l1-scalper

./: CLAUDE.md  data  pyproject.toml
.claude/: settings.json
docs/: roadmap.md
models/: entry_model.pt  hmm_regime.pkl  macro_hmm_v2.pkl  micro_hmm_regime.pkl  micro_hmm_v2.pkl
models/regime_v2_fold2/: macro_hmm.pkl  micro_hmm.pkl  router_w15.json  router_w30.json  router_w60.json
scripts/: backtest_rolling.py  catchup_data.py  download_ohlcv.py  precompute_features.py  precompute_macro_features_v2.py  precompute_micro_features.py  precompute_micro_features_v2.py  run_paper.py  sweep_adaptive_stop.py  sweep_all_regimes.py  sweep_backtest.py  sweep_backtest_bracket.py  sweep_backtest_zscore.py  sweep_trailing.py  train_entry.py  train_entry_regime.py  train_entry_regime_v2.py  train_hmm.py  train_micro_hmm.py  validate_macro.py  validate_micro.py  validate_regimes.py
scripts/infra/: l1-scalper.service
src/backtest/: engine.py  position_manager.py  rolling_inference.py
src/config/: settings.py
src/features/: base.py  cvd.py  hurst.py  lee_ready.py  microprice.py  normalizer.py  ofi.py  pipeline.py  realized_vol.py  return_autocorr.py  spread.py  trade_rate.py  trade_size_dist.py  volume_profile.py  vpin.py
src/live/: bot.py  streaming_features.py  tradovate_executor.py
src/models/: dataset.py  entry_model.py
src/regime/: bocpd.py  features.py  hmm.py  macro_features_v2.py  macro_hmm_v2.py  micro_features.py  micro_features_v2.py  micro_hmm.py  trainer.py  (+7 more)
tests/: test_adaptive_stop.py  test_features.py  test_merge.py  test_regime.py  test_validation.py
(+42 files in other folders)
