[project]
name = "l1-scalper"
version = "0.1.0"
description = "CNN-LSTM MES Scalping System"
requires-python = ">=3.11"
dependencies = [
    "databento>=0.70",
    "pyarrow>=15.0",
    "click>=8.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
historical-pull = "src.data.historical_pull:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
